# Model-Context-Protocol

./: MCP.ipynb  README.md  app.py  main.py  pyproject.toml  requirements.txt  test.py
database/: pinecone.ipynb
huggingfacespace/: grad.ipynb  gradio.py
